Fix choose file button in dark mode and Closes #27

--- a/resources/sass/darkmode.scss
+++ b/resources/sass/darkmode.scss
@@ -87,6 +87,11 @@ body {
     border: 1px solid $border-bg;
 }
 
+.form-control::-webkit-file-upload-button {
+    color: white;
+    background-color: $body-bg;
+}
+
 .input-group-text {
     background-color: $input-bg;
     border: 1px solid $border-bg;
